--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="gemStore">
 <head>
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
-    <script type="text/javascript" src="products.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="js/products.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 </head>
 
 <body ng-controller="StoreController as store">
