NT Few gulp task added

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -15,7 +15,7 @@
 
 <body ng-controller="StoreController as store">
   <header>
-    <h1 class="text-center">Flatlander Crafted Gems</h1>
+    <h1 class="text-center">Flatlander Crafted Gems3</h1>
 
     <h2 class="text-center">– an Angular store –</h2>
   </header>
