--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
   <!-- endbuild -->
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
   <!-- build:js js/head-script.js -->
+    <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="bower_components/angular-loader/angular-loader.js"></script>
   <script type="text/javascript" src="js/products.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <!-- endbuild -->
