--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
   <!-- endbuild -->
 
+  <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+  <script type="text/javascript" src="bower_components/angular-loader/angular-loader.min.js"></script>
   <!-- build:js js/head-script.js -->
-    <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-    <script type="text/javascript" src="bower_components/angular-loader/angular-loader.js"></script>
   <script type="text/javascript" src="js/products.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
   <!-- endbuild -->
